aaa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aaa
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: aaa
  template:
    metadata:
      labels:
        app: aaa
    spec:
      containers:
      - image: quay.io/qxu/aaa:latest
        name: aaa
        ports:
        - containerPort: 8080
